@startuml

title __VIEW's Class Diagram__\n

  namespace  {
    namespace iew {
      class view.AnchorPaneNode {
          - course : String
          + AnchorPaneNode()
          + setCourse()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.AnchorPaneNodeNav {
          + AnchorPaneNodeNav()
          - doSomething()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.CalendarView {
          - daysView : VBox[]
          - finalView : VBox
          + CalendarView()
          + calculateHeightForBlock()
          + getFinalView()
          - getBlockForEmpty()
          - getBlockForLesson()
          - putLessonDayOnCalendar()
          - putLessonWeekOnCalendar()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.NavCalendarView {
          - calendar : Calendar
          - finalView : VBox
          - gridPaneItems : ArrayList<Button>
          - header : Text
          + NavCalendarView()
          + getCalendar()
          + getCurrentMonth()
          + getFinalView()
          + initCalendar()
          + initDays()
          + navNextWeek()
          + navPrevWeek()
          + updateMonthHeader()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.RoomView {
          - list : ListView
          + RoomView()
          + getList()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.ViewHandler {
          - currentScene : Scene
          - primaryStage : Stage
          + ViewHandler()
          + closeView()
          + getPrimaryStage()
          + openView()
          + start()
          - loadAddLessonView()
          - loadCalendarView()
      }
    }
  }
  

  view.AnchorPaneNode -up-|> javafx.scene.layout.AnchorPane
  view.AnchorPaneNodeNav -up-|> javafx.scene.layout.AnchorPane
  view.CalendarView -up-|> javafx.scene.Node
  view.ViewHandler o-- controller.CalendarViewController : calendarViewController
  view.ViewHandler o-- model.Model : model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
